--- a/Proyectos.html
+++ b/Proyectos.html
@@ -19,7 +19,7 @@
    </header>
 
  <main>
-   <section class="row" data-masonry='{"percentPosition":true}'>
+   <section class="row mt-5" data-masonry='{"percentPosition":true}'>
     <div class="col-md-4 mb-4" >
        <div class="card text-dark">
            <div class="card-body">
