--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     
     <script>
-        window.location.assign("main/Portafolio.html");
+        window.location.assign("main/Index.html");
     </script>
 </body>
 </html>
