--- a/main/Proyectos.html
+++ b/main/Proyectos.html
@@ -23,9 +23,9 @@
     <div class="col-md-4 mb-4" >
        <div class="card text-dark">
            <div class="card-body">
-               <h2 class="card-title">Proyecto 1</h2>
-               <p class="card-text">Se mostrará aquí</p>
-               <a href class="card-link">Ver</a>
+               <h2 class="card-title">Landing Page</h2>
+               <p class="card-text">Página de venta específica para un productos</p>
+               <a href="https://joematamoros.github.io/LandingPage/" class="card-link">Ver</a>
            </div>
        </div>
     </div>
